--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ opencv-python = "^4.7.0.72"
 torch = "^2.0.0"
 torchvision = "^0.15.1"
 torchaudio = "^2.0.1"
+transformers = "^4.28.1"
+scenedetect = "^0.6.1"
+optimum = "^1.8.3"
 
 
 [build-system]
