--- a/config.yaml
+++ b/config.yaml
@@ -6,3 +6,5 @@ paths:
   TEMPLATES_QUERY_PATH: "queries/templates_with_features.txt"
   TEMPLATES_PATH: "data/templates.csv"
   VIDEOS_PATH: "data/video_data"
+  VID_EMB_PATH: "data/frames_encoding.csv"
+  VISITED_PATH: "data/visited.csv"
