--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,9 @@ torchaudio = "^2.0.1"
 transformers = "^4.28.1"
 scenedetect = "^0.6.1"
 optimum = "^1.8.3"
+scikit-learn = "^1.2.2"
+matplotlib = "^3.7.1"
+google-cloud-storage = "^2.9.0"
 
 
 [build-system]
